@@ -12,7 +12,14 @@ message=/boot/boot.msg
 
 image=/boot/cdrom-linux
 	label=install
-	append=""
+	append="devfs=mount,dall"
+	initrd=/boot/cdrom-initrd.gz
+	initrd-size=8192
+	read-only
+
+image=/boot/cdrom-linux
+	label=expert
+	append="DEBCONF_PRIORITY=low devfs=mount,dall"
 	initrd=/boot/cdrom-initrd.gz
 	initrd-size=8192
 	read-only
@@ -22,5 +29,12 @@ image=/boot/cdrom-linux
 	label=install-safe
 	initrd=/boot/cdrom-initrd.gz
 	initrd-size=8192
-	append="video=ofonly"
+	append="devfs=mount,dall video=ofonly"
+	read-only
+
+image=/boot/cdrom-linux
+	label=expert-safe
+	initrd=/boot/cdrom-initrd.gz
+	initrd-size=8192
+	append="DEBCONF_PRIORITY=low devfs=mount,dall video=ofonly"
 	read-only
