@@ -3,6 +3,11 @@ debian-installer (20031227) UNRELEASED; urgency=low
   * Joey Hess
     - i386 will work on 32 mb now, update system requirements in syslinux help
       screen
+    - Remove the encoding grep, all non-utf8 encodings should be fixed now.
+    - Fix make dependency loop on hppa and sparc where FLOPPY_SIZE is not set.
+      Closes: #225389
+    - Add expert and expert-safe boot modes to yaboot.
+    - Pass devfs=mount,dall in yaboot.conf for new powerpc kernel.
   * Thiemo Seufer
     - Sanitize mips/mipsel image creation.
   * Vincent Sanders
